# cofracture

./: .gitignore  AGENTS.md  Cargo.toml  OPENSPEC_FLOW.md  README.md  index.html  package-lock.json  package.json  vite.config.ts
.github/workflows/: deploy-pages.yml
openspec/changes/collaborative-mandelbrot-explorer/: design.md  proposal.md  tasks.md
openspec/changes/fly-apart-zoom-in/: design.md  proposal.md  tasks.md
openspec/changes/fly-together-zoom-out/: design.md  proposal.md  tasks.md
openspec/changes/nested-glass-tiles/: tasks.md
openspec/changes/refine-fractal-viewport-zoom/: design.md  proposal.md  tasks.md
openspec/changes/resilient-networking-foundation/: design.md  proposal.md  tasks.md
openspec/changes/webtorrent-mesh-discovery/: design.md  proposal.md  tasks.md
openspec/changes/zoom-out-button/: design.md  proposal.md  tasks.md
openspec/specs/collaborative-presence/: spec.md
openspec/specs/fly-apart-zoom-in/: spec.md
openspec/specs/fly-together-zoom-out/: spec.md
presence-shared/: Cargo.toml
presence-shared/src/: lib.rs
presence-wasm/: Cargo.toml
presence-wasm/src/: lib.rs
scripts/: acceptance-discovery.mjs
scripts/network-harness/: peer.html  run.mjs
src/: bounds.ts  easing.ts  main.ts  mandelbrot-gl.ts  mandelbrot-math.ts  mandelbrot.ts  mesh-discovery.test.ts  mesh-discovery.ts  presence.ts  starfield.ts  styles.css  tile-style.ts  verification-notes.md  viewport.ts  webtorrent-browser.d.ts
src/networking/: discovery-adapter.ts  index.ts  peers.ts  session.test.ts  session.ts  types.ts
(+38 files in other folders)
